エントリーポイントを変更し、Reduxストアの型安全なフックを追加。ログイン機能を実装し、サイドバーにユーザー情報を表示。

--- a/src/components/Sidebar.scss
+++ b/src/components/Sidebar.scss
@@ -122,9 +122,14 @@
             h4 {
               color: white;
               font-weight: 500;
+              margin: 0; // マージンを削除
+              padding: 0; // パディングを削除
             }
+            
             span {
               color: #686a6e;
+              font-size: 12px;
+              display: block; // ブロック要素として表示
             }
           }
         }
