--- a/src/App.scss
+++ b/src/App.scss
@@ -1,9 +1,10 @@
 .App {
   display: flex;
   height: 100vh;
-  width: 100%;
+  width: 100vw;
   text-align: center;
   background-color: #313338;
+  overflow: hidden;
 
   .header {
     font-size: 2em;
@@ -12,6 +13,11 @@
 
   .app-background {
     background-color: #2f3136;
+  }
+
+  &__body {
+    display: flex;
+    flex: 1;
   }
 }
 
